--- a/pdp-strom/src/Pages/Css/Home.module.css
+++ b/pdp-strom/src/Pages/Css/Home.module.css
@@ -301,7 +301,7 @@ margin-bottom: 12px;
     text-align: left;
     margin-top: -20px;
 }
-.h1div h1{
+.h1div h2{
     font-size: 24px;
     line-height: 29px;
     color: #2E2E2E;
@@ -493,6 +493,7 @@ margin-bottom: 12px;
 .divbig2{
     width: 100%;
     background: #E5E5E5;
+    
 }
 .div12{
     width: 90%;
@@ -502,13 +503,14 @@ margin-bottom: 12px;
     justify-content: space-between;
 
 }
-.div12 h2{
+.div12 h1{
     font-size: 30px;
 line-height: 36px;
 text-align: center;
-font-weight: 800;
+font-weight: 700;
 color: #2E2E2E;
-
+margin-top: 50px;
+margin-left: 5%;
 }
 .div12 button{
     font-size: 16px;
@@ -517,6 +519,7 @@ color: #536DFD;
 padding: 2px 15px 2px 15px;
 border:1px solid #536DFD;
 border-radius: 4px;
+margin-right: 5%;
 }
 .divcards{
     width: 90%;
@@ -525,6 +528,7 @@ border-radius: 4px;
     align-items: center;
     justify-content: space-around;
      margin: auto;
+     margin-top: 50px !important;
 }
 .divcards2{
     width: 90%;
@@ -533,6 +537,8 @@ border-radius: 4px;
     align-items: center;
     justify-content: space-around;
     margin: auto;
+    margin-top: 30px !important;
+    margin-bottom: 50px !important;
 }
 .carddiv{
     display: flex;
@@ -544,11 +550,227 @@ border-radius: 4px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
     margin: auto;
+    margin-top: 10px !important;
 }
 .carddiv h2{
     font-size: 20px;
 line-height: 24px;
 text-align: center;
 color: #2E2E2E;
+}
+.divcards3{
+    margin-top: 20px !important;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+    /* padding-bottom: 30px; */
+}
+.divcards3 h3{
+    font-size: 20px;
+line-height: 24px;
+text-align: center;
+color: #9DA7BB;
+padding-bottom: 10px;
+transition: all 0.3s;
+border-bottom: 3px solid #E5E5E5;
+}
+.divcards3 h3:hover{
+color: #2E2E2E;
+border-bottom: 3px solid #536DFD;
 
+}
+@media(max-width:850px){
+    .divcards3 h3{
+        font-size: 12px !important;
+    }
+}
+
+@media(max-width: 548px) {
+    .divcards3 {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        overflow-x: scroll;
+    }
+
+    .divcards3 h3{
+        /* width: 300px; */
+        font-size: 16px !important;
+        padding-right: 10px;
+    }
+}
+
+.divbig3{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.card11{
+    position: relative;
+    width: 250px;
+    /* min-width: 300px; */
+    /* background-color: red; */
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    padding-bottom: 30px;
+    margin-top: 50px;
+}
+.card11:hover{
+    box-shadow: 0px 12px 45px rgba(83, 109, 253, 0.25);
+}
+.card11 img{
+    width: 100%;
+
+}
+.card11 h1{
+    font-size: 16px;
+    line-height: 19px;
+    color: #2E2E2E;
+    text-align: left;
+    margin-left: 5%;
+    padding-top: 10px;
+}
+.card11 .yulduz{
+    margin-left: 5%;
+    margin-top: -10px;
+}
+.card11 .h1div span{
+        font-size: 12px;
+        line-height: 17px;
+        font-weight: 400;
+        color: #5d626c;
+
+}
+.h1div h3{
+    font-size: 14px;
+    line-height: 29px;
+    color: #2E2E2E;
+    margin-left: 10px;
+}
+.pdiv1 p{
+    font-size: 14px;
+    line-height: 17px;
+    color: #9DA7BB;
+    margin-left: 10px;
+}
+.pdiv1{
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-align: left;
+}
+.card11:hover h1{
+    font-size: 16px;
+line-height: 19px;
+color: #536DFD;
+}
+.divbig4{
+    background: url(../img/Rectangle\ 13.png);
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    margin-top: 50px;
+}
+.divbig4 h1{
+    font-size: 40px;
+line-height: 48px;
+font-weight: 350;
+color: #FFFFFF;
+display: flex;
+padding-top: 10%;
+text-align: center;
+justify-content: center;
+}
+@media(max-width:900px){
+    .divbig4 h1{
+        font-size: 30px;
+    }
+}
+@media(max-width:636px){
+    .divbig4 h1{
+        font-size: 23px;
+        line-height: 25px;
+    }
+}
+@media(max-width:500px){
+    .divbig4 h1{
+        font-size: 18px;
+    }
+    .div12 h1{
+        font-size: 20px;
+        /* line-height: 25px; */
+        text-align: center;
+        font-weight: 700;
+        color: #2E2E2E;
+        margin-top: 50px;
+        /*      argin-left: 5%; */
+        margin-top:0px;
+    }
+    .div12{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        /* margin-top: 30px; */
+    }
+}
+@media(max-width:400px){
+    .divbig4 h1{
+        font-size: 12px;
+        line-height: 18px;
+
+    }
+    .div12 {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    
+    }
+    .div12 h1{
+        font-size: 16px;
+        
+    }
+}
+.divbig5{
+    width: 100%;
+    background: #E5E5E5;
+}
+.divbig5 h1{
+    font-size: 30px;
+line-height: 30px;
+color: #2E2E2E;
+}
+.slide{
+    position: relative;
+    width: 700px;
+    min-width: 300px;
+    background-color: white;
+    margin: auto;
+    margin-top: 100px;
+}
+.slide h2{
+    font-size: 20px;
+line-height: 24px;
+text-align: center;
+color: #2E2E2E;
+padding-top: 100px;
+}
+.slide p{
+    font-size: 18px;
+line-height: 21px;
+/* identical to box height */
+text-align: center;
+color: #2E2E2E;
+margin-top: 20px;
+}
+.slide img{
+    position: absolute;
+    top: -25%;
+    left: 40%;
 }
