--- a/pdp-strom/src/Pages/Css/Home.module.css
+++ b/pdp-strom/src/Pages/Css/Home.module.css
@@ -774,3 +774,134 @@ margin-top: 20px;
     top: -25%;
     left: 40%;
 }
+.divbig6{
+    width: 100%;
+    background: #E5E5E5;
+}
+.divbig6 h1{
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 50px;
+    color: #2E2E2E;
+}
+.divbigimg{
+    width: 90%;
+    min-width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+    margin-top: 50px !important;
+    flex-wrap: wrap;
+   padding-bottom: 50px;
+}
+@media(max-width: 735px) {
+    /* .divbigimg {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        overflow-x: scroll;
+    } */
+    .divbigimg img{
+       width: 70%;
+    }
+}
+@media(max-width:500px){
+    .divbigimg{
+        width: 100%;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .divbigimg img{
+        margin-top: 20px;
+        width: 45%;
+    }
+}
+.container{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+}
+
+.divfooter1{
+    /* width: 200px; */
+    text-align: left;
+    margin-top: 50px;
+    
+}
+.divfooter1 h2{
+    font-size: 18px;
+    line-height: 21px;
+    color: #2E2E2E;
+
+}
+.divfooter1 p{
+    font-size: 14px;
+    line-height: 17px;
+    color: #9DA7BB;
+    margin-top: 10px;
+}
+
+.divfooter4{
+    /* width: 200px; */
+    text-align: left;
+    margin-top: 50px;
+    
+}
+.divfooter4 h2{
+    font-size: 18px;
+    line-height: 21px;
+    color: #2E2E2E;
+}
+.footerimg{
+    margin-top: 15px !important;
+    width: 200px;
+    min-width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    /* margin: auto; */
+    background-color:#F1F2F6;
+    padding: 5px 10px 5px 10px;
+    border-radius: 2px;
+}
+.divfooter4 h3{
+    font-size: 16px;
+    color: #2E2E2E;
+    margin-top: 20px;
+}
+.divfooter4 button{
+    background-color: #9DA7BB;
+    border-radius: 4px;
+    width: 80%;
+    height: 40px;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    border: none;
+    margin-top: 20px;
+}
+#fg{
+    margin-top: -20px;
+}
+#fg1{
+    margin-top: -50px;
+}
+#fg2{
+    margin-top: 20px;
+}
+/* @media(max-width::after) */
+.footerbottom{
+    width: 200px;
+    min-width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    /* background-color: red; */
+    margin-left: 9%;
+}
