--- a/pdp-strom/src/Pages/Css/Home.module.css
+++ b/pdp-strom/src/Pages/Css/Home.module.css
@@ -6,6 +6,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    min-height: 700px;
     background: #536DFD ;
     overflow: hidden;
     flex-wrap: wrap;
@@ -32,6 +33,15 @@
 @media (max-width:666px){
     .header_card{
         margin-top: 50px;
+    }
+    .header_card{
+        margin-bottom: 30px !important;
+    }
+    .header_text{
+        margin: auto;
+    }
+    .dumaloq{
+        display: none;
     }
 }
 .header_text h2{
@@ -200,9 +210,6 @@ margin-bottom: 12px;
     }
 }
 @media (max-width:500px){
-    .dumaloq{
-        display: none;
-    }
     .card1{
         margin-left: -30px;
         width: 300px;
@@ -677,6 +684,7 @@ color: #536DFD;
     background-repeat: no-repeat;
     background-size: 100%;
     margin-top: 50px;
+    background-color: #E5E5E5;
 }
 .divbig4 h1{
     font-size: 40px;
@@ -693,6 +701,7 @@ justify-content: center;
         font-size: 30px;
     }
 }
+
 @media(max-width:636px){
     .divbig4 h1{
         font-size: 23px;
@@ -745,14 +754,17 @@ justify-content: center;
     font-size: 30px;
 line-height: 30px;
 color: #2E2E2E;
+padding-top: 50px;
 }
 .slide{
     position: relative;
-    width: 700px;
+    width: 70%;
     min-width: 300px;
     background-color: white;
     margin: auto;
     margin-top: 100px;
+    padding-bottom:10px;
+    border-radius: 4px;
 }
 .slide h2{
     font-size: 20px;
@@ -774,9 +786,41 @@ margin-top: 20px;
     top: -25%;
     left: 40%;
 }
+@media(max-width:1000px){
+    .slide{
+        width: 100%;
+    }
+}@media(max-width:750px){
+    
+}
+@media(max-width:726px){
+    .slide p{
+        font-size:15px;
+    }
+     
+@media(max-width:588px){
+    .slide p{
+        font-size:12px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .slide img{
+        position: absolute;
+        left: 30%;
+        
+    }
+}
+@media(max-width:350px){
+    .slide p{
+        font-size: 10px;
+        
+    }
+}
 .divbig6{
     width: 100%;
     background: #E5E5E5;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 .divbig6 h1{
     font-size: 30px;
@@ -892,10 +936,6 @@ margin-top: 20px;
 #fg1{
     margin-top: -50px;
 }
-#fg2{
-    margin-top: 20px;
-}
-/* @media(max-width::after) */
 .footerbottom{
     width: 200px;
     min-width: 150px;
@@ -905,3 +945,74 @@ margin-top: 20px;
     /* background-color: red; */
     margin-left: 9%;
 }
+.tegi{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 30%;
+    margin-left: 9%;
+    margin-top: 40px;
+}
+.tegi p{
+    color: #9DA7BB;
+    font-size: 10px;
+}
+.tegi span{
+    color: #9DA7BB;
+    font-size: 10px;
+    margin-top: -15px;
+}
+@media(max-width:1140px){
+    .tegi{
+        width: 50%;
+        font-size: 8px;
+    }
+}
+@media(max-width:500px){
+    .tegi{
+        width: 80%;
+        font-size: 8px;
+    }
+    #fg2{
+        width: 180px;
+    }
+    .footerbottom{
+        margin-top: 30px;
+    }
+}
+@media(max-width:802px){
+    #fg{
+        display: none;
+    }  
+}
+@media(max-width:584px){
+    #fg1{
+        display: none;
+    }
+}
+#app {
+    height: 100%;
+  }
+  .swiper {
+    width: 100%;
+    height: 100%;
+}  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+ .divswiper{
+    width: 85%;
+    margin: auto;
+ }
