--- a/pdp-strom/src/Pages/Css/Home.module.css
+++ b/pdp-strom/src/Pages/Css/Home.module.css
@@ -6,7 +6,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    min-height: 600px;
+    min-height: 700px;
     background: #536DFD !important;
     overflow: hidden !important;
     flex-wrap: wrap;
@@ -291,7 +291,7 @@ margin-bottom: 12px;
     font-size: 14px;
     line-height: 17px;
     color: #9DA7BB;
-   
+    margin-left: 20px;
     
 }
 .pdiv{
@@ -391,10 +391,10 @@ margin-bottom: 12px;
     border-radius: 2px;
 }
 .mm1 h2{
-    font-size: 16px;
+    font-size: 12px;
     line-height: 17px;
     color: #FFFFFF;
-    padding: 2px 20px 2px 20px !important;
+    padding: 2px 10px 2px 10px !important;
     background-color: #10C8A0 !important;
     border-radius: 2px;
 }
@@ -566,6 +566,10 @@ line-height: 24px;
 text-align: center;
 color: #2E2E2E;
 }
+.ddd {
+    padding: 0px 10px 0px 10px !important;
+    font-size: 15px !important;
+}
 .divcards3{
     margin-top: 20px !important;
     width: 90%;
@@ -689,13 +693,13 @@ color: #536DFD;
 }
 .divbig4 h1{
     font-size: 40px;
-line-height: 48px;
-font-weight: 350;
-color: #FFFFFF;
-display: flex;
-padding-top: 10%;
-text-align: center;
-justify-content: center;
+    line-height: 48px;
+    font-weight: 350;
+    color: #FFFFFF;
+    display: flex;
+    padding-top: 10%;
+    text-align: center;
+    justify-content: center;
 }
 @media(max-width:900px){
     .divbig4 h1{
@@ -715,19 +719,16 @@ justify-content: center;
     }
     .div12 h1{
         font-size: 20px;
-        /* line-height: 25px; */
         text-align: center;
         font-weight: 700;
         color: #2E2E2E;
         margin-top: 50px;
-        /*      argin-left: 5%; */
         margin-top:0px;
     }
     .div12{
         display: flex;
         align-items: center;
         justify-content: space-around;
-        /* margin-top: 30px; */
     }
 }
 @media(max-width:400px){
@@ -753,9 +754,9 @@ justify-content: center;
 }
 .divbig5 h1{
     font-size: 30px;
-line-height: 30px;
-color: #2E2E2E;
-padding-top: 50px;
+    line-height: 30px;
+    color: #2E2E2E;
+    padding-top: 50px;
 }
 .slide{
     position: relative;
@@ -769,18 +770,17 @@ padding-top: 50px;
 }
 .slide h2{
     font-size: 20px;
-line-height: 24px;
-text-align: center;
-color: #2E2E2E;
-padding-top: 100px;
+    line-height: 24px;
+    text-align: center;
+    color: #2E2E2E;
+    padding-top: 100px;
 }
 .slide p{
     font-size: 18px;
-line-height: 21px;
-/* identical to box height */
-text-align: center;
-color: #2E2E2E;
-margin-top: 20px;
+    line-height: 21px;
+    text-align: center;
+    color: #2E2E2E;
+    margin-top: 20px;
 }
 .slide img{
     position: absolute;
@@ -792,9 +792,6 @@ margin-top: 20px;
         width: 100%;
     }
 }
-/* @media(max-width:750px){
-    
-} */
 @media(max-width:726px){
     .slide p{
         font-size:15px;
@@ -803,7 +800,6 @@ margin-top: 20px;
         padding-top: 0px;
     }
 }
-     
 @media(max-width:588px){
     .slide p{
         font-size:12px;
@@ -819,7 +815,6 @@ margin-top: 20px;
 @media(max-width:350px){
     .slide p{
         font-size: 10px;
-        
     }
 }
 .divbig6{
@@ -845,7 +840,7 @@ margin-top: 20px;
     margin: auto;
     margin-top: 50px !important;
     flex-wrap: wrap;
-   padding-bottom: 50px;
+    padding-bottom: 50px;
 }
 @media(max-width: 735px) {
     .divbigimg img{
@@ -872,7 +867,6 @@ margin-top: 20px;
 }
 
 .divfooter1{
-    /* width: 200px; */
     text-align: left;
     margin-top: 50px;
     
@@ -891,7 +885,6 @@ margin-top: 20px;
 }
 
 .divfooter4{
-    /* width: 200px; */
     text-align: left;
     margin-top: 50px;
     
@@ -942,15 +935,15 @@ margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    /* background-color: red; */
-    margin-left: 9%;
+    margin-left: 7%;
+    margin-top: 30px;
 }
 .tegi{
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 30%;
-    margin-left: 9%;
+    margin-left: 7%;
     margin-top: 40px;
 }
 .tegi p{
@@ -985,7 +978,7 @@ margin-top: 20px;
         display: none;
     }  
 }
-@media(max-width:584px){
+@media(max-width:700px){
     #fg1{
         display: none;
     }
