--- a/pdp-strom/src/Pages/Css/Navbar.css
+++ b/pdp-strom/src/Pages/Css/Navbar.css
@@ -1,133 +1,76 @@
-.navbar{
-    width: 100%;
-    height: 60px;
-    margin:  auto;
-    background-color: #fff;
-}
-.BOR{
-
-    background-color: #fff;
-}
-.logo_page{
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.select{
-    width: 160px;
-    text-align: center;
-    align-items: center;
-    height: 30px;
-    border-radius: 5px;
-    color: #536DFD;
-    border: none;
-    outline: none;
-    box-shadow: 1px 1px 3px gray;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-#cars{
-    border:1px solid #9DA7BB;
-    width: 150px;
-    padding: 3px 10px 3px 10px;
-    border-radius: 4px;
-    color: #536DFD;
-}
-.bat_page{
-    width: 40%;
-display: flex;
-justify-content: space-around;
-align-items: center;
-}
-#cars1{
-    border:1px solid #9DA7BB;
-    /* width: 150px; */
-    padding: 3px 10px 3px 10px;
-    border-radius: 4px;
-    color: #9DA7BB;
-}
-.select1{
-    height: 35px;
-    text-align: center;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    color: #536DFD;
-    box-shadow: 1px 1px 3px gray;
-}
-.bat_page button{
-    width: 150px;
-    border: none;
-    border-radius: 5px;
+.d-flex button{
+    width: 79px;
+    height: 28px;
+      font-size: 12px;
+      line-height: 14px;
+      text-transform: uppercase;
+      color: #FFFFFF;
     background: #536DFD;
-    height: 40px;
-   
-    color: #fff;
-}
-
-@media (max-width:1216px) {
-    #cars{
-        margin-left: 50%;
-    }
-}
-@media (max-width:836px) {
- #cars1{
-    margin-left: -40%;
- }
-  .bat_page button{
-    margin-left: 40%;
+      border-radius: 4px;
+      border: none;
   }
- 
-}
-@media (max-width:688px) {
-    .navbar{
-        width: 50%;
-        height: auto;
+  .d-flex select{
+    width: 88px;
+    height: 30px;
+    align-items: center;
+    text-align: center;
+      margin-right: 42px;
+      border: 1px solid #9DA7BB;
+      border-radius: 4px;
+      font-size: 12px;
+      line-height: 14px;
+      text-transform: uppercase;
+      color: #9DA7BB;
+  }
+  
+  .all{
+    width: 154px;
+    height: 30px;
+    font-size: 12px;
+  line-height: 14px;
+  text-transform: uppercase;
+  color: #536DFD;
+  margin-left: 80px;
+  align-items: center;
+  border: 1px solid #9DA7BB;
+  border-radius: 4px;
+  background: white;
+  }
+  @media(max-width:990px){
+    .all{
+      margin-left: 0px ;
     }
-   .logo_page{
-    flex-direction: column;
-    
-   }
-   #cars{
-    margin-top: 30% !important;
-    margin: 10px auto;
-
-   }
-   #cars1{
-    margin: 30px auto;
+  }
+  .d-flex1 select{
+        width: 150px;
+        height: 30px;
+        align-items: center;
+        text-align: center;
+        margin-right: 42px;
+        border: 1px solid #9DA7BB;
+        border-radius: 4px;
+        font-size: 12px;
+        line-height: 14px;
+        text-transform: uppercase;
+        color: #9DA7BB;
+  }
+  .select1{
     width: 150px;
-   }
-
-   .bat_page{
-    flex-direction: column-reverse;
-   }
-   .bat_page button{
-    margin: 10px auto;
-   }
-   .logo_page img{
-    margin-top: -10%;
-   }
-   .navbar{
-    width: 90%;
-   }
-}
-@media (max-width:422px) {
-    .bat_page button{
-        width: 70%;
-        margin-top: 10%;
+    border: none;
+    height: 30px;
+    align-items: center;
+    text-align: center;
+      margin-right: 42px;
+      border: 1px solid #9DA7BB;
+      border-radius: 4px;
+      font-size: 12px;
+      line-height: 14px;
+      text-transform: uppercase;
+      color: #9DA7BB;
+    
+  }
+  /* @media(max-width:991px){
+    .select1{
+        margin-left: -500px;
     }
-    #cars1{
-        width: 60%;
-    }
-    #cars{
-        width: 90%;
-        font-size: 15px;
-    }
-}
-@media (max-width:1210px) {
-    .navbar{
-        width: 80%;
-    }
-}
+} */
